# ml-kedro-example

./: .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  run.py
.github/workflows/: ci.yml
conf/: logging.yml
docs/source/: conf.py  index.rst
src/ml_kedro_example/: __init__.py  __main__.py  settings.py
src/ml_kedro_example/pipelines/data_science/: nodes.py
tests/: test_run.py
tests/pipelines/data_science/: test_pipeline.py
